<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/shape_horizontal_divider"
    android:showDividers="middle"
    android:background="@drawable/shape_bottom_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/share_to_wechat"
            android:textColor="@color/black"
            app:drawableTopCompat="@mipmap/icon_wechat"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/share_to_qq"
            android:textColor="@color/black"
            app:drawableTopCompat="@mipmap/icon_qq"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/copy_url"
            android:textColor="@color/black"
            app:drawableTopCompat="@mipmap/icon_url"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save_to_local"
            android:textColor="@color/black"
            app:drawableTopCompat="@mipmap/icon_share_save"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="17sp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:background="@drawable/selector_button"/>

</LinearLayout>