<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/shape_horizontal_divider"
    android:showDividers="middle"
    android:background="@drawable/shape_bottom_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_picture_take"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_take"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"
            app:drawableTopCompat="@drawable/press_picture_take"/>
        <TextView
            android:id="@+id/tv_picture_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_choose"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"
            app:drawableTopCompat="@drawable/press_picture_choose"/>
        <TextView
            android:id="@+id/tv_video_take"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/video_take"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"
            app:drawableTopCompat="@drawable/press_video_take"/>
        <TextView
            android:id="@+id/tv_video_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/video_choose"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:drawablePadding="5dp"
            app:drawableTopCompat="@drawable/press_video_choose"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="@dimen/size_middle_large"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:background="@drawable/selector_button"/>

</LinearLayout>